<resources>
    <string name="app_name">Movie Rating</string>
    <string name="movie_rating">Movie Rating</string>
    <string name="movie_title">Movie Title</string>
    <string name="director_name">Director Name</string>
    <string name="save_movie_rating">Save Movie Rating</string>
    <string name="viewed_at_theater">Viewed At Theater</string>
    <string name="welcome">Welcome</string>
    <string name="add_review">Add Review</string>

    <plurals name="star_rating">
        <item quantity="zero">Rating: %d stars</item>
        <item quantity="one">Rating: %d star</item>
        <item quantity="other">Rating: %d stars</item>
    </plurals>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Titles for preferences -->
    <string name="default_choice">Select the default rating</string>
    <string name="theme_choice">Dark Theme</string>

    <!-- Key name for rating preference in SharedPreferences -->
    <string name="pref_rating_key" translatable="false">rating</string>
    <string name="pref_theme_key" translatable="false">dark</string>
    <string name="settings">Settings</string>
    <string name="view_ratings">View Ratings</string>
    <string name="rating">Rating:</string>

    <string-array name="rating_options">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="movies">
        <item>Harry Potter</item>
        <item>Pacific Rim</item>
        <item>Spirited Away</item>
    </string-array>

    <string-array name="directors">
        <item>David Yates</item>
        <item>Guillermo del Toro</item>
        <item>Hayao Miyazaki</item>
    </string-array>

    <string-array name="theater">
        <item>true</item>
        <item>true</item>
        <item>false</item>
    </string-array>

    <string-array name="rating">
        <item>9</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>

</resources>