<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LaunchActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/movieRatingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="40dp"
        android:text="@string/add_review"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/completedRatingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="40dp"
        android:text="@string/view_ratings"
        android:layout_gravity="center_horizontal" />

</LinearLayout>